# engineering-universe

./: .dockerignore  .gitignore  AGENTS.md  Dockerfile  NOTES.md  README.md  REDIS.md  design.md  docker-compose.yml  main.py  pyproject.toml  secrets.env
.claude/: settings.local.json
api/: main.py  search.py
docs/: api_ui.md  deploy.md  redis_schema.md  spec.md
eng_universe/: __init__.py  config.py  crawler.py  embeddings.py  indexer.py  metrics_server.py  pipeline.py  queue.py  robots.py  search.py
eng_universe/index/: __init__.py  entities.py  indexer.py  pipeline.py
eng_universe/ingest/: __init__.py  crawler.py  etl.py  queue.py  robots.py
eng_universe/monitoring/: __init__.py  logging_utils.py  metrics.py
eng_universe/search/: __init__.py  pylate_backend.py  search.py
eng_universe/storage/: __init__.py  r2.py
pylate-index/index/: documents_ids_to_plaid_ids.sqlite
scripts/: check_index.py  clear_crawl.py  crawl_limit.py  crawl_then_index.py  index_one.py  requeue_from_crawl.py  seed_urls.py
web/: app.js  index.html  styles.css
