[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "eng-universe"
version = "0.1.0"
description = "Engineering blog crawler and hybrid search"
readme = "README.md"
requires-python = ">=3.11,<3.13"
dependencies = [
    "aiohttp>=3.9.0",
    "beautifulsoup4>=4.12.0",
    "fastapi>=0.115.0",
    "huggingface_hub>=0.24.0",
    "openai>=1.10.0",
    "pylate>=1.3.4",
    "prometheus-client>=0.20.0",
    "python-dotenv>=1.0.1",
    "pydantic>=2.8.0",
    "redis>=5.0.0",
    "uvicorn>=0.30.0",
]

[tool.setuptools.packages.find]
where = ["."]
include = ["eng_universe*"]
